# chinese-chess

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LEARNINGS.md  Makefile  README.md
.github/workflows/: ci.yml  pages.yml
scripts/: build_pikafish.sh  build_wasm.sh
src/apps/cli/: main.cpp
src/bridge/: browser_session.cpp  browser_session.h  wasm_exports.cpp
src/core/: game.cpp  game.h
src/engine/: opening_book.cpp  opening_book.h  pikafish_nnue.cpp  pikafish_nnue.h  pikafish_process.cpp  pikafish_process.h  pikafish_search.cpp  pikafish_search.h  search.cpp  search.h  uci_codec.cpp  uci_codec.h
tests/: game_tests.cpp
tests/fixtures/: fake_uci_engine.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: App.vue
web/src/bridge/: aiSearchWorkerProtocol.ts  wasmBridge.ts
web/src/components/: PhaserBoard.vue
web/src/game/: boardMetrics.ts  boardScene.ts  fen.ts
web/src/workers/: aiSearchWorker.ts
